--- a/index.html
+++ b/index.html
@@ -20,38 +20,29 @@
 
 <body>
 
-  <!-- Page Header -->
-
+  <!-- navigation -->
+  <nav class="nav" role="navigation">
+    <ul class="nav__items">
+      <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+      <li class="nav__item"><a href="#ProfessionalProjects" class="nav__link">Work</a></li>
+      <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+    </ul>
+  </nav>
+  
+      
   <header class="header" role="banner" id="top">
-    <div class="row">
-      <nav class="nav" role="navigation">
-        <ul class="nav__items">
-          <li class="nav__item"><a href="#ProfessionalProjects" class="nav__link">Work</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
-          <li class="nav__item">
-            <a href="#about" class="nav__link">About</a>
-          </li>
-          <li class="nav__item">
-            <a href="#contact" class="nav__link">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    <!-- main page -->
-    <div class="header__text-box row">
-      <div class="header__text">
-        <h1 class="heading-primary">
-          <span>Tomás Longo</span>
-        </h1>
-      </div>
+    
+    <div class="header__text">
+      <h1 class="heading-primary">
+        Tomas Longo
+      </h1>
     </div>
 
     <section class="about" id="about">
       <div class="row">
-        <h2>About Me</h2>
         <div class="about__content">
           <div class="about__text">
-            <!-- Replace the below paragraph with info about yourself -->
+            <h2>About Me</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
               nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
@@ -59,9 +50,8 @@
               ratione molestiae fuga veniam facere similique voluptate.
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <a href="#" class="btn_Full">My Resume</a>
           </div>
-
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
             <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
